[project]
name = "aiops-agent"
version = "0.1.0"
description = "AIOps Diagnose Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "scikit-learn>=1.0",
    "numpy>=1.24",
    "causal-learn>=0.1",
    "matplotlib>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
